--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <p class="p1"><span class="s1">&lt;head&gt;</span></p>
 <p class="p1"><span class="s1">    &lt;meta charset="UTF-8"&gt;</span></p>
 <p class="p1"><span class="s1">    &lt;meta name="viewport" content="width=device-width, initial-scale=1.0"&gt;</span></p>
-<p class="p1"><span class="s1">    &lt;title&gt;Karina Bueno - Bitcoin &amp; Digital Assets Consulting&lt;/title&gt;</span></p>
+<p class="p1"><span class="s1">    &lt;title&gt;Karina Bueno - Bitcoin &amp; Crypto Consulting&lt;/title&gt;</span></p>
 <p class="p1"><span class="s1">    &lt;style&gt;</span></p>
 <p class="p1"><span class="s1">        * { margin: 0; padding: 0; box-sizing: border-box; }</span></p>
 <p class="p1"><span class="s1">        body {</span></p>
@@ -272,13 +272,13 @@
 <p class="p1"><span class="s1">    &lt;div class="container"&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;header&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;h1&gt;KARINA BUENO&lt;/h1&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;div class="tagline"&gt;Bitcoin &amp; Digital Assets Consulting&lt;/div&gt;</span></p>
+<p class="p1"><span class="s1">            &lt;div class="tagline"&gt;Bitcoin &amp; Crypto Consulting&lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;div class="credentials"&gt;Lawyer • Mediator • Bitcoin Educator&lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/header&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">```</span></p>
 <p class="p1"><span class="s1">    &lt;div class="intro"&gt;</span></p>
-<p class="p1"><span class="s1">        I help digital asset investors and businesses with &lt;strong&gt;personalized solutions&lt;/strong&gt;. Not generic courses.</span></p>
+<p class="p1"><span class="s1">        I help crypto investors and businesses with &lt;strong&gt;personalized solutions&lt;/strong&gt;. Not generic courses.</span></p>
 <p class="p1"><span class="s1">    &lt;/div&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">    &lt;div class="emphasis-box"&gt;</span></p>
@@ -293,12 +293,12 @@
 <p class="p1"><span class="s1">            &lt;p&gt;⚖️ &lt;strong&gt;Lawyer (BR - OAB/SP):&lt;/strong&gt; Licensed to practice law in Brazil with expertise in clarity, legal structure, and confidentiality. For matters involving Swiss law, I work alongside qualified Swiss legal professionals to ensure full compliance and expert guidance.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;p&gt;🤝 &lt;strong&gt;Mediator &amp; Conciliator:&lt;/strong&gt; Specialized in active listening, conflict resolution, and guiding people toward practical solutions tailored to their unique situations.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;p&gt;💎 &lt;strong&gt;Bitcoin educator &amp; investor:&lt;/strong&gt; I've tested different protocols and strategies hands-on, learning what works and where the real risks are.&lt;/p&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;p style="margin-top: 13px;"&gt;&lt;strong&gt;My approach:&lt;/strong&gt; As a trained mediator and lawyer, I listen first. What's YOUR specific challenge? What have you tried? What are you afraid of? Then we build a personalized solution together. &lt;strong&gt;My focus is finding a solution for whatever problem you have&lt;/strong&gt; - whether it's technical, strategic, or educational.&lt;/p&gt;</span></p>
+<p class="p1"><span class="s1">            &lt;p style="margin-top: 13px;"&gt;&lt;strong&gt;My approach:&lt;/strong&gt; As a trained mediator and lawyer, I listen first. What's YOUR specific challenge? What have you tried? What are you afraid of? Then we build a personalized solution together.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">    &lt;/div&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">    &lt;div class="section"&gt;</span></p>
-<p class="p1"><span class="s1">        &lt;h2&gt;Bitcoin &amp; Digital Assets Consulting&lt;/h2&gt;</span></p>
+<p class="p1"><span class="s1">        &lt;h2&gt;Bitcoin &amp; Crypto Consulting&lt;/h2&gt;</span></p>
 <p class="p1"><span class="s1">        </span></p>
 <p class="p1"><span class="s1">        &lt;div class="card"&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;h3 class="card-title"&gt;💎 Individual Consultation&lt;/h3&gt;</span></p>
@@ -308,13 +308,13 @@
 <p class="p1"><span class="s1">            &lt;div class="info-box"&gt;</span></p>
 <p class="p1"><span class="s1">                &lt;h4&gt;📋 Most Common Topics:&lt;/h4&gt;</span></p>
 <p class="p1"><span class="s1">                &lt;ul&gt;</span></p>
-<p class="p1"><span class="s1">                    &lt;li&gt;General questions and foundational understanding&lt;/li&gt;</span></p>
 <p class="p1"><span class="s1">                    &lt;li&gt;Wallet setup (hot &amp; cold wallets)&lt;/li&gt;</span></p>
 <p class="p1"><span class="s1">                    &lt;li&gt;Withdrawing from exchanges safely&lt;/li&gt;</span></p>
 <p class="p1"><span class="s1">                    &lt;li&gt;Security best practices (seed phrases, backups)&lt;/li&gt;</span></p>
 <p class="p1"><span class="s1">                    &lt;li&gt;Bitcoin fundamentals &amp; philosophy&lt;/li&gt;</span></p>
 <p class="p1"><span class="s1">                    &lt;li&gt;DCA strategies &amp; accumulation planning&lt;/li&gt;</span></p>
-<p class="p1"><span class="s1">                    &lt;li&gt;Understanding digital assets beyond Bitcoin (altcoins, DeFi basics)&lt;/li&gt;</span></p>
+<p class="p1"><span class="s1">                    &lt;li&gt;Multi-sig &amp; inheritance planning&lt;/li&gt;</span></p>
+<p class="p1"><span class="s1">                    &lt;li&gt;Understanding crypto beyond Bitcoin (altcoins, DeFi basics)&lt;/li&gt;</span></p>
 <p class="p1"><span class="s1">                &lt;/ul&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;/div&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -341,7 +341,7 @@
 <p class="p1"><span class="s1">            &lt;/div&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">            &lt;p style="color: #cbd5e1; font-size: 13px; margin-top: 18px; padding: 15px; background: rgba(247, 147, 26, 0.1); border-radius: 8px;"&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;strong&gt;Best for:&lt;/strong&gt; Complete beginners wanting structured guidance, or intermediate users tackling complex setups (inheritance planning, business implementation).</span></p>
+<p class="p1"><span class="s1">                &lt;strong&gt;Best for:&lt;/strong&gt; Complete beginners wanting structured guidance, or intermediate users tackling complex setups (multi-sig, inheritance planning, business implementation).</span></p>
 <p class="p1"><span class="s1">            &lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/div&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -399,7 +399,7 @@
 <p class="p1"><span class="s1">        &lt;div class="card"&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;h3 class="card-title"&gt;🇨🇭 Complete Relocation Support to Switzerland&lt;/h3&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;div class="price"&gt;From CHF 150&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;p class="card-intro"&gt;Moving to Switzerland? As someone who relocated to Switzerland with my husband and 3 kids, I help with YOUR specific situation.&lt;/p&gt;</span></p>
+<p class="p1"><span class="s1">            &lt;p class="card-intro"&gt;Moving to Switzerland's Bitcoin capital? As someone who relocated to Switzerland with my husband and 3 kids, I help with YOUR specific situation.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">            </span></p>
 <p class="p1"><span class="s1">            &lt;ul&gt;</span></p>
 <p class="p1"><span class="s1">                &lt;li&gt;Documentation guidance &amp; registration support&lt;/li&gt;</span></p>
@@ -419,46 +419,8 @@
 <p class="p2"><span class="s1"></span><br></p>
 <p class="p1"><span class="s1">            &lt;div class="info-box" style="margin-top: 18px;"&gt;</span></p>
 <p class="p1"><span class="s1">                &lt;h4&gt;🇨🇭 Why Switzerland?&lt;/h4&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;p&gt;Switzerland offers exceptional quality of life, political stability, and a crypto-friendly regulatory environment. Lugano, with the Plan ₿ initiative, accepts Bitcoin for taxes and public services.&lt;/p&gt;</span></p>
+<p class="p1"><span class="s1">                &lt;p&gt;Switzerland offers exceptional quality of life, political stability, and a crypto-friendly regulatory environment. Lugano, known as Switzerland's Bitcoin capital with the Plan ₿ initiative, accepts Bitcoin for taxes and public services.&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">            &lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">        &lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">    &lt;/div&gt;</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">    &lt;div class="section"&gt;</span></p>
-<p class="p1"><span class="s1">        &lt;h2&gt;Stack Smart&lt;/h2&gt;</span></p>
-<p class="p1"><span class="s1">        </span></p>
-<p class="p1"><span class="s1">        &lt;div class="card" style="border: 3px solid #22c55e; background: linear-gradient(135deg, rgba(34, 197, 94, 0.15), rgba(247, 147, 26, 0.1));"&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;h3 class="card-title"&gt;🎮 Stack Smart - Bitcoin Accumulation App&lt;/h3&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;div class="price" style="color: #22c55e;"&gt;In Development • Beta 2026 • Free for First 500&lt;/div&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;p class="card-intro"&gt;&lt;strong style="color: #22c55e;"&gt;📍 Bitcoin Only&lt;/strong&gt; • Transform how you see market drops from fear to opportunity.&lt;/p&gt;</span></p>
-<p class="p1"><span class="s1">            </span></p>
-<p class="p1"><span class="s1">            &lt;div style="background: rgba(15, 23, 42, 0.5); padding: 20px; border-radius: 10px; margin: 20px 0;"&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;p style="color: #cbd5e1; font-size: 14px; line-height: 1.7; margin-bottom: 15px;"&gt;</span></p>
-<p class="p1"><span class="s1">                    &lt;strong style="color: #ef4444;"&gt;The problem:&lt;/strong&gt; Most beginners see price drops as just red candles and panic. They buy at emotional tops (FOMO) and freeze during discounts (fear), missing strategic accumulation opportunities.</span></p>
-<p class="p1"><span class="s1">                &lt;/p&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;p style="color: #cbd5e1; font-size: 14px; line-height: 1.7; margin: 0;"&gt;</span></p>
-<p class="p1"><span class="s1">                    &lt;strong style="color: #22c55e;"&gt;The solution:&lt;/strong&gt; Stack Smart transforms how you see the market. Instead of fear of drops, you see objective data: percentage discount from ATH, RSI indicators, and probability of accumulation efficiency. Make strategic decisions based on data, not fear.</span></p>
-<p class="p1"><span class="s1">                &lt;/p&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;/div&gt;</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">            &lt;div style="display: flex; flex-wrap: wrap; gap: 10px; justify-content: center; margin: 25px 0;"&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;span style="display: inline-block; background: rgba(247, 147, 26, 0.2); color: #F7931A; padding: 8px 16px; border-radius: 20px; font-size: 13px;"&gt;</span></p>
-<p class="p1"><span class="s1">                    🎮 Gamified Experience</span></p>
-<p class="p1"><span class="s1">                &lt;/span&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;span style="display: inline-block; background: rgba(34, 197, 94, 0.2); color: #22c55e; padding: 8px 16px; border-radius: 20px; font-size: 13px;"&gt;</span></p>
-<p class="p1"><span class="s1">                    📊 Efficiency Score</span></p>
-<p class="p1"><span class="s1">                &lt;/span&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;span style="display: inline-block; background: rgba(247, 147, 26, 0.2); color: #F7931A; padding: 8px 16px; border-radius: 20px; font-size: 13px;"&gt;</span></p>
-<p class="p1"><span class="s1">                    💎 Bitcoin Only</span></p>
-<p class="p1"><span class="s1">                &lt;/span&gt;</span></p>
-<p class="p1"><span class="s1">                &lt;span style="display: inline-block; background: rgba(34, 197, 94, 0.2); color: #22c55e; padding: 8px 16px; border-radius: 20px; font-size: 13px;"&gt;</span></p>
-<p class="p1"><span class="s1">                    📈 Data-Driven Decisions</span></p>
-<p class="p1"><span class="s1">                &lt;/span&gt;</span></p>
-<p class="p1"><span class="s1">            &lt;/div&gt;</span></p>
-<p class="p2"><span class="s1"></span><br></p>
-<p class="p1"><span class="s1">            &lt;p style="color: #94a3b8; font-size: 13px; font-style: italic; text-align: center;"&gt;</span></p>
-<p class="p1"><span class="s1">                Join the waitlist by mentioning your interest during consultation!</span></p>
-<p class="p1"><span class="s1">            &lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">    &lt;/div&gt;</span></p>
 <p class="p2"><span class="s1"></span><br></p>
@@ -505,7 +467,7 @@
 <p class="p1"><span class="s1">    &lt;footer&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;p&gt;Currently pursuing advanced blockchain education at the University of Nicosia&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">        &lt;p style="margin-top: 8px;"&gt;Serving individuals and businesses in Switzerland, Brazil, and internationally&lt;/p&gt;</span></p>
-<p class="p1"><span class="s1">        &lt;p style="margin-top: 13px; font-size: 11px; opacity: 0.7;"&gt;© 2025 Karina Bueno - Bitcoin &amp; Digital Assets Consulting&lt;/p&gt;</span></p>
+<p class="p1"><span class="s1">        &lt;p style="margin-top: 13px; font-size: 11px; opacity: 0.7;"&gt;© 2025 Karina Bueno - Bitcoin &amp; Crypto Consulting&lt;/p&gt;</span></p>
 <p class="p1"><span class="s1">    &lt;/footer&gt;</span></p>
 <p class="p1"><span class="s1">&lt;/div&gt;</span></p>
 <p class="p1"><span class="s1">```</span></p>
